# phase

./: .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  README.md  Tiltfile
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/ai_support/: candidates.rs  filter.rs  mod.rs
crates/engine/src/analysis/: ability_graph.rs  corpus_tests.rs  resource.rs  sim.rs
crates/engine/src/database/: card_db.rs  embalm_eternalize.rs  embalm_eternalize_tests.rs  encore_tests.rs  hideaway.rs  hideaway_tests.rs  meld_tests.rs  mod.rs  mtgjson.rs  search.rs  subtype_vocab.rs  synthesis.rs  unearth_tests.rs
crates/engine/src/game/: ability_rw.rs  ability_scan.rs  ability_utils.rs  blitz.rs  blitz_tests.rs  casting.rs  casting_costs.rs  casting_targets.rs  casting_tests.rs  combat.rs  combat_damage.rs  commander.rs  companion.rs  contraptions.rs  cost_payability.rs  costs.rs  coverage.rs  deck_loading.rs  deck_validation.rs  derived.rs  derived_views.rs  devotion.rs  dungeon.rs  elimination.rs  engine.rs  engine_auto_pass_decision_tests.rs  engine_casting.rs  engine_combat.rs  engine_crew_tests.rs  engine_debug.rs  engine_keyword_action_stack_tests.rs  engine_modes.rs  engine_payment_choices.rs  engine_phase_trigger_regression_tests.rs  engine_priority.rs  engine_replacement.rs  engine_resolution_choices.rs  engine_resolve_batch.rs  engine_stack.rs  engine_station_tests.rs  (+55 more)
crates/engine/src/parser/: oracle.rs  oracle_casting.rs  oracle_classifier.rs  oracle_condition.rs  oracle_cost.rs  oracle_keyword.rs  oracle_modal.rs  oracle_quantity.rs  oracle_replacement.rs  oracle_saga.rs  oracle_static.rs  oracle_target.rs  oracle_tests.rs  oracle_trigger.rs  oracle_trigger_snapshot_tests.rs  oracle_trigger_tests.rs  oracle_util.rs  oracle_vote.rs  swallow_check.rs
crates/engine/src/types/: ability.rs  actions.rs  card.rs  counter.rs  events.rs  format.rs  game_state.rs  keywords.rs  layers.rs  log.rs  mana.rs  mod.rs  phase.rs  player.rs  proposed_event.rs  replay.rs  statics.rs  triggers.rs
crates/engine/tests/: alania_divergent_storm.rs  anointed_peacekeeper_chosen_opponent.rs  become_color_set_std_batch.rs  bre_of_clan_stoutarm_endstep.rs  celestial_reunion_behold_choose_type.rs  chaos_warp_owner_library.rs  cloud_ex_soldier_live_power.rs  coalition_victory_win_condition.rs  coalition_victory_win_condition_runtime.rs  coerced_attack_punisher.rs  craft_material_references.rs  crowd_control_warden_dual_counters.rs  dazzling_beauty_become_blocked.rs  dreadhorde_invasion_amass.rs  each_player_they_control_scope.rs  end_combat_phase.rs  enters_tapped_this_turn.rs  esper_terra_saga_token_lore.rs  false_peace_skips_all_combat_phases.rs  filtered_cost_reduction_only_first_cast.rs  flame_spill_excess_damage.rs  frantic_inventory_graveyard_count.rs  furious_spinesplitter_any_damage.rs  ghyrson_starn.rs  granted_ability_self_binding.rs  greymond_avacyns_stalwart.rs  identity_crisis_multi_zone_exile.rs  incredible_hulk_enrage_attacking.rs  issue_4937_iona_chosen_color.rs  kav_landseeker_delayed_sacrifice.rs  last_night_together_restricted_combat.rs  lose_control_this_turn_delayed_trigger.rs  lost_mine_fungi_cavern_duration_runtime.rs  lost_mine_storeroom_targeting_runtime.rs  loyalty_ability_activated_trigger.rs  mad_mage_lost_level_scry_runtime.rs  memory_vessel_std_s25.rs  modal_enters_becomes_choice.rs  molten_core_maestro_2384.rs  momir_basic_emblem.rs  (+38 more)
crates/engine/tests/fixtures/: integration_cards.json  issue_2854_cards.json
crates/engine/tests/integration/: abundance_optional_draw_replacement.rs  ad_nauseam_repeat.rs  anaphoric_scope_allowlist_guard.rs  ancient_copper_dragon_roll_d20.rs  another_round_repeat.rs  ark_of_hunger_play_from_graveyard_751.rs  breeches_blastmaker_coin_flip_copy.rs  call_damage_control_modal_return.rs  cda_counted_quantities_pt.rs  consuming_vapors_rebound.rs  curse_c17_when_enchanted_player_attacked_cycle.rs  curse_spell_cast_triggers.rs  daretti_emblem_simultaneous_death.rs  frostcliff_siege_anchor_word_modes.rs  gatta_and_luzzu_regression.rs  gemstone_caverns_begin_game.rs  gev_scaled_scorch_enter_counters.rs  gollum_scheming_guide_card_predicate_guess.rs  granted_alt_cost_hand_keyword.rs  greater_good_activation.rs  harrow_regression.rs  heist_production_path_handoff.rs  hollow_one_cost_reduction.rs  integration_adventure.rs  integration_bending.rs  issue_1191_tzaangor_shaman.rs  issue_1319_ninjutsu_dead_attacker.rs  issue_1322_murktide_delve.rs  issue_1345_brash_taunter_self_trigger.rs  issue_1353_body_of_knowledge.rs  issue_1353_death_pits_observer.rs  issue_1354_coveted_jewel.rs  issue_1544_zinnia_offspring.rs  issue_1969_combat_damage_auto_pass.rs  issue_1985_dfc_command_zone_cast.rs  issue_2348_key_to_the_vault.rs  issue_2372_nourishing_shoal_alt_cost.rs  issue_2414_semblance_anvil.rs  issue_2415_rottenmouth_viper_sacrifice_cost.rs  issue_2422_demanding_dragon.rs  (+63 more)
crates/phase-ai/: Cargo.toml
crates/phase-ai/baselines/: perf-baseline.json
crates/phase-ai/src/: cast_facts.rs  combat_ai.rs  config.rs  damage_reflection.rs  decision_kind.rs  deck_knowledge.rs  determinize.rs  lib.rs  projection.rs  search.rs  session.rs  synergy.rs  tactical_gate.rs  threat_profile.rs
crates/phase-ai/src/combo/: detection.rs
crates/phase-ai/src/duel_suite/: mod.rs  run.rs  spec.rs  tests.rs
crates/phase-ai/src/features/: aggro_pressure.rs  aristocrats.rs  control.rs  landfall.rs  mana_ramp.rs  mod.rs  reanimator.rs  spellslinger_prowess.rs
crates/phase-ai/src/planner/: mod.rs
crates/phase-ai/src/policies/: aggro_pressure.rs  mod.rs  (+20 more)
crates/phase-ai/tests/: ai_quality.rs  cedh_integration.rs  decision_trace.rs  duel_suite_attribution.rs  morph_face_down_ai_scoring.rs  scenarios.rs
(+661 files in other folders)
