cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*"]
# lobby-worker/broker-wasm is a standalone wasm32 artifact (Cloudflare Worker
# Durable Object brain). Excluded so the native workspace build / Tilt clippy
# never compile it for the host target — it is built only via wasm-bindgen.
exclude = ["client/src-tauri", "lobby-worker/broker-wasm"]

[workspace.package]
version = "0.14.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
tracing = "0.1"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
tag-message = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
pre-release-replacements = [
  { file = "../../client/package.json", search = '"version": "[^"]*"', replace = '"version": "{{version}}"' },
  { file = "../../client/src-tauri/tauri.conf.json", search = '"version": "[^"]*"', replace = '"version": "{{version}}"' },
  { file = "../../client/src-tauri/Cargo.toml", search = '^version = "[^"]*"', replace = 'version = "{{version}}"' },
]
publish = false

[profile.dev]
opt-level = 0
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.test]
inherits = "dev"
codegen-units = 256

[profile.wasm-dev]
inherits = "dev"
opt-level = 2
codegen-backend = "llvm"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'

# Native server: speed over size, unwind so tokio catches per-task panics
[profile.server-release]
inherits = "release"
opt-level = 2
panic = 'unwind'

# CLI tools (oracle-gen, coverage-report): fast compile, decent runtime
[profile.tool]
inherits = "dev"
opt-level = 1
codegen-backend = "llvm"

# Profiling: native-optimized like server-release, with debug info retained
# so samply/flamegraph attribute samples to real symbols.
# Usage: cargo build --profile profiling --bin ai-bench-state
[profile.profiling]
inherits = "server-release"
debug = "line-tables-only"
strip = false
