[package]
name = "phase-tauri"
version = "0.1.55"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
engine = { path = "../../crates/engine" }
phase-ai = { path = "../../crates/phase-ai" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
# tauri-utils 2.9.2 has blanket From impls that overlap with time 0.3.48.
time = "=0.3.47"
