[package]
name = "engine"
version.workspace = true
edition = "2021"
license.workspace = true

[features]
cli = ["tracing-subscriber"]
audit = []
forge = []
proptest = ["dep:proptest"]

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
rand = "0.9"
rand_chacha = "0.9"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
toml = "0.8"
proptest = { version = "1", optional = true }

nom = "8.0"
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
web-time = "1"
im = { version = "15", features = ["serde"] }
rustc-hash = "2"
smallvec = { version = "1", features = ["serde", "union"] }

[[bin]]
name = "coverage-report"
path = "src/bin/coverage_report.rs"
test = false

[[bin]]
name = "set-check"
path = "src/bin/set_check.rs"

[[bin]]
name = "parser-gap-analyzer"
path = "src/bin/parser_gap_analyzer.rs"
test = false

[[bin]]
name = "oracle-gen"
path = "src/bin/oracle_gen.rs"
required-features = ["cli"]

[[bin]]
name = "rules-audit"
path = "src/bin/rules_audit.rs"
required-features = ["audit"]
test = false

[[bin]]
name = "card-data-validate"
path = "src/bin/card_data_validate.rs"
test = false

[[bin]]
name = "tokens-gen"
path = "src/bin/tokens_gen.rs"
test = false

[[bin]]
name = "coverage-parse-diff"
path = "src/bin/coverage_parse_diff.rs"
# `test = true` (default): this bin carries non-trivial diff logic with inline
# unit tests, unlike the logic-free tool bins above that set `test = false`.

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }
assert_matches = "1.5"
pretty_assertions = "1"
